tests/test61.rael.exp
Error [1:5]: Invalid operation (+) on types
| log "2" + 2
|     ^
